<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lb_grey"
    android:orientation="vertical"
    android:padding="20dp"
    android:clickable="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/date"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/eventId"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/eventid" />

    <TextView
        android:id="@+id/facility"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/facility" />


</LinearLayout>