
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">


    <com.example.pigeon_party_app.AvatarView
        android:id="@+id/entrant_profile_image"
        android:layout_width="@dimen/admin_list_avatar_size"
        android:layout_height="@dimen/admin_list_avatar_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/Facility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facility"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>