<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#A4D1C7"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eventName"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/status"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:text="@string/status" />


</LinearLayout>